<resources>
    <string name="app_name">Bodyshield</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_device">DeviceActivity</string>


    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">bodyshield Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="bluetooth_not_opened">bluetooth is not opended</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_chart">realTimeChart</string>
    <string name="title_activity_device_scan">DeviceScanActivity</string>

    <string name="ScanText">Scan</string>
    <string name="hight_fever">High Fever</string>
    <string name="low_fever">Low Fever</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="SaveText">Save</string>
    <string name="User">User</string>
    <string name="add_user">Add New User</string>
    <string name="edit">Edit</string>

    <!-- LoginActivity-->
    <string name="login_please_input_name_warning">Please input your name</string>
    <string name="login_please_input_password_warning">Please input your password</string>
    <string name="login_please_input_sex_warning"  >Please input your sex</string>
    <string name="login_please_input_age_warning"  >Please input your age</string>
    <string name="login_please_input_mobile_warning"  >Please input your phone number</string>
    <string name="press_for_exit">Press once more to exit</string>

    <string name="device_default_user">guest</string>
    <string name="title_activity_setting">SettingActivity</string>

    <!-- loading-->
    <string name="loading">Processing, please wait...</string>
    <string name="loading2">please wait...</string>

<!--    <string name="temp_unit_1"><Data><font color="black"><b>℃</b></font><font color="gray"><b>/℉</b></font></Data></string>
    <string name="temp_unit_2"><Data><font color="gray"><b>℃/</b></font><font color="black"><b>℉</b></font></Data></string>-->
    <string name="temp_unit_1"><font color="black"><b>℃</b></font><font color="gray"><b>/℉</b></font></string>
    <string name="temp_unit_2"><Data><font color="gray"><b>℃/</b></font><font color="black"><b>℉</b></font></Data></string>
    <string name="vibration_on"><Data><font color="black"><b>ON</b></font><font color="gray"><b>/OFF</b></font></Data></string>
    <string name="vibration_off"><Data><font color="gray"><b>ON/</b></font><font color="black"><b>OFF</b></font></Data></string>
    <string name="not_selected_user">Please select a user</string>
    <string name="title_activity_user_guide">UserGuideActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>

    <!-- chart-->
    <string name="temperature_chart_title">Temperature Data</string>
    <string name="history_temperature_chart_title">History Temperature Data</string>
    <string name="chart_time_unit">Time(min)</string>


    <!-- setting page-->
    <string name="setting_battery">Battery Level</string>
    <string name="setting_temp_unit">Temp.Unit</string>
    <string name="setting_alert_setting">Alert Setting</string>
    <string name="setting_high_fever">High Fever</string>
    <string name="setting_low_fever">Low Fever</string>
    <string name="setting_volume">Volume</string>
    <string name="setting_vibration">Vibration</string>
    <string name="setting_alert_interval">Alert Interval</string>
    <string name="setting_measure_interval">Measure Interval</string>
    <string name="setting_user_guide">User Guide</string>
    <string name="setting_Feedback">Feedback</string>
    <string name="setting_about_us">About Us</string>
    <string name="setting_every">Every </string>
    <string name="setting_min">min</string>


    <string name="img">Pictures</string>
    <string name="tap">Take a picture</string>
    <string name="cancel">Cancel</string>

    <string name="feedback_content">Please contact customer service:</string>
    <string name="check_update">Check For Update</string>
    <string name="checkResult1">Is the latest version</string>
    <string name="checkResult2"><a href="http://www.apexto.com/download-center/show/2.html" style="color: white">Click to download the new version</a></string>
    <string name="checkResult3">Please check the network</string>
    <string name="RegisterText">register</string>
    <string name="login_text">login</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="get_pick_failure">Get failure, please try again</string>
    <string name="login_loading">Log in, please later</string>
    <string name="username_error_message">User name cannot be empty</string>
    <string name="password_error_message">Password cannot be empty</string>




    <!--网络相关错误-->
    <string name="network_interruption_error_message" >Network interruption, please check your network status</string>
    <string name="network_timeout_error_message">Network connection timeout, please check your network status</string>
    <string name="network_unusual_error_message">Connection is unusual, please check your network status</string>
    <string name="network_server_error_message">Failed to connect to the server, please try again later</string>
    <string name="login_failed">The user name or password error, please try again after checking</string>
    <string name="age_error_message">Please input the correct age</string>
    <string name="register_loading">To register, please later</string>
    <string name="username_already_register">The user name has already been registered please modify the user name</string>
    <string name="registered_successfully">Registered successfully</string>
    <string name="register_failed_message">Registration failed, please try again</string>
    <string name="man">man</string>
    <string name="woman">woman</string>
    <string name="register_select_sex">Please select a gender</string>
    <string name="edit_profile">Edit profile</string>
    <string name="register_has_account" >There are accounts?To login</string>
    <string name="input_feedback_message">Please enter your message to feedback</string>
    <string name="feedback_success_message" >Feedback is successful, we will make as soon as possible</string>
    <string name="leave_contact">Please leave your contact way so that we can contact you (not required)</string>
    <string name="input_user_contact">Please enter your contact information</string>
    <string name="confirm">confirm</string>
    <string name="access_server_failed">Access the server failed, please try again</string>
    <string name="access_server_success">The update is successful</string>
    <string name="save_server_success">Change the password successfully</string>
    <string name="feedback_loading_message" >Is feedback your problem, please later</string>
    <string name="feedback_title">feedback</string>
    <string name="login_please_input_country_code">Please enter the national  phone area code</string>
    <string name="register_please_input_country_code">countryCode</string>
    <string name="login_text_verification_code">captcha</string>
    <string name="login_input_verification_code"> input captcha</string>
    <string name="login_get_captcha">get captcha</string>
    <string name="login_please_input_captcha_code_warning">Please enter the captcha</string>
    <string name="login_please_input_get_captcha_code_warning">Please get captcha</string>
    <string name="login_please_input_correct_captcha_code_warning">Please enter the correct captcha</string>
    <string name="profile_change_password">Change  password</string>
    <string name="login_please_input_mobile_correct_warning">Please enter a correct phone number</string>
    <string name="edit_profile_password_phone_warning">Please enter the binding mobile phone number when registering</string>
    <string name="login_please_input_new_password_warning">Please enter your new password</string>
    <string name="edit_password_success">Modify password successfully, please login again</string>
    <string name="login_forget_the_password">forget the password</string>
    <string name="login_third_party_account">  third party account  </string>
    <string name="edit_password">change password</string>
    <string name="edit_text_verification_code">input user name get captcha</string>
    <string name="edit_please_input_username_warning">Please fill in the user name to access authentication code</string>
    <string name="register_please_input_country_code2">Please enter the country</string>
    <string name="edit_password_captcha_sucssess">captcha has been sent to fill in the mobile phone number when registering</string>
    <string name="facebook_app_id">1028389817293450</string>
</resources>
