<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.TextInputEditText
        style="@style/InputStyle"
        android:hint="@string/login_please_input_name_warning"
        android:layout_marginTop="20dp"
        android:id="@+id/et_userName"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <android.support.design.widget.TextInputEditText
        style="@style/InputStyle"
        android:hint="@string/login_please_input_password_warning"
        android:layout_marginTop="20dp"
        android:id="@+id/et_userPassword"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.design.widget.TextInputEditText
        style="@style/InputStyle"
        android:hint="@string/login_please_input_country_code"
        android:layout_marginTop="20dp"
        android:id="@+id/et_userCountryCode"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputEditText
        android:hint="@string/login_please_input_mobile_warning"
        android:layout_marginTop="20dp"
        android:id="@+id/et_phone"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:hint="@string/login_text_verification_code"
            android:id="@+id/et_code"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/tv_send_code"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_verifycode_selector"
            android:gravity="center"
            android:textSize="13sp"
            android:text="@string/login_get_captcha"
            android:layout_height="40dp" />
    </LinearLayout>
</LinearLayout>