<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@mipmap/bluebg"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/navigation_bar_height"
        android:background="@color/navigation_bar_background"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_alignParentLeft="true"
            android:id="@+id/backBtn"
            android:layout_width="@dimen/navigation_bar_setting_width"
            android:layout_height="@dimen/navigation_bar_setting_height"
            android:layout_centerVertical="true"
            android:src="@mipmap/jian"/>


        <TextView
            android:id="@+id/tvRegister"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_password"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/tvSave"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SaveText"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.TextInputEditText
            android:textColorHint="@color/white"
            style="@style/InputStyle"
            android:hint="@string/login_please_input_name_warning"
            android:layout_marginTop="20dp"
            android:id="@+id/et_userName"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:visibility="gone"
            android:layout_marginRight="5dp"
            android:textColorHint="@color/white"
            android:inputType="number"
            style="@style/InputStyle"
            android:hint="@string/register_please_input_country_code"
            android:layout_marginTop="20dp"
            android:id="@+id/et_userCountryCode"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_weight="1.4"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputEditText
            android:visibility="gone"
            android:inputType="number"
            android:textColorHint="@color/white"
            android:hint="@string/login_please_input_mobile_warning"
            android:layout_marginTop="20dp"
            android:id="@+id/et_phone"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:inputType="number"
                android:textColorHint="@color/white"
                android:hint="@string/login_input_verification_code"
                android:id="@+id/et_code"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/white"
                android:id="@+id/tv_send_code"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_verifycode_selector"
                android:gravity="center"
                android:textSize="13sp"
                android:text="@string/login_get_captcha"
                android:layout_height="40dp" />
        </LinearLayout>
        <android.support.design.widget.TextInputEditText
            style="@style/InputStyle"
            android:textColorHint="@color/white"
            android:hint="@string/login_please_input_new_password_warning"
            android:layout_marginTop="20dp"
            android:id="@+id/et_userPassword"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>